# geister

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  Dockerfile  README.md  REALMS_CHEATSHEET.md  agent_memory.py  agent_swarm.py  api.py  ashoka_cli.py  candid_text.py  citizen_agent.py  citizen_personas.py  docker-compose.dev.yml  e2e_driver.py  env  env.example  geister_cli.py  icp_candid.py  icp_identity.py  load_secret_envs.sh  local.sh  local_start.sh  mcp_oauth.py  mcp_server.py  mcp_tokens.py  ollama_client.py  persona_agent.py  pod_manager.py  pyproject.toml  realm_tools.py  requirements-dev.txt  requirements.txt  run.sh  run_ollama_only.sh  run_tests_local.py  secrets.enc.yaml  setup.py  setup_env.sh  (+7 more)
.github/workflows/: branch-pod-deploy.yml  branch-pod-test.yml  docker-hub.yml  main-pod-deploy.yml  main-pod-test.yml  pod-restart.yml  publish.yml
cloudflared/: config.yml
database/: db_client.py  schema.sql
docs/: MCP_SERVER.md
e2e/: __init__.py  casals_verify.py  phase_1_realm.py  phase_3_members.py  phase_6_litigation.py  phase_7_proposals.py  run_e2e.py  run_state.py
prompts/personas/: advisor-ashoka.yaml  citizen-compliant.yaml  citizen-exploiter.yaml  (+2 more)
scripts/: backup_template.py  cleanup_db.sh
static/: agent.html  monitor.html  persona.html  swarm-dashboard.html  swarm.html
telos_templates/: citizen_onboarding.txt  realm_founder.txt
templates/: geister-template-1.json
tests/: test_oauth_flow.py
vm/: .dev.pid  .mcp.pid  Dockerfile  cloudflared-config.yml  dev.sh  docker-compose.yml  geister-api.env  geister-api.service  mcp.sh  setup.sh
